fix(style): style.scss not built and left behind

--- a/style.scss
+++ b/style.scss
@@ -95,9 +95,6 @@
   }
 }
 
-:root {
-}
-
 html {
   -webkit-text-size-adjust: 100%;
   font-family:
